FIXBUG add break-word for <p> so that <br> would not show overflow the device!

--- a/w3c/css/markdown.css
+++ b/w3c/css/markdown.css
@@ -66,3 +66,7 @@ table tr {
 table tr:nth-child(2n) {
    background-color: #f8f8f8;
 }
+
+p {
+  word-break: break-word;
+}
